updated css and javascript file link

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>System Usability Questionnaire</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
-    <link href="/_css/sus-style.css" rel="stylesheet">
+    <link href="_css/sus-style.css" rel="stylesheet">
     
 </head>
 <body>
@@ -311,6 +311,6 @@
             <p class="footer-text">This questionnaire is based on the System Usability Scale &lpar;SUS&rpar;, which was developed by John Brooke while working at Digital Equipment Corporation. &copy; Digital Equipment Corporation, 1986.<br><br>This page is designed and hand coded by Weinan Li. Visit <a href="http://www.weinanli.com" target="_blank">weinanli.com</a> for more information.</p>
         </div>
     </footer>
-    <script type="text/javascript" src="/_script/sus-script.js"></script>
+    <script type="text/javascript" src="_script/sus-script.js"></script>
 </body>
 </html>
