--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <header>
-        <div class="fixed-header"><h1 class="web-title">System Usability Questionnaire</h1></div>
+        <div class="fixed-header"><h1 class="web-title"></h1></div>
     </header>
     <main>
         <form id="form-area">
@@ -286,6 +286,7 @@
                     </label>
                     <label class="scale-mark">Strongly<br>agree</label>
                 </div>
+                <hr>
                 <br>
                 <div class="mob-center">
                     <input type="submit" id="btn-calc" value="SHOW SCORE"><input type="reset" id="btn-reset" value="RESET">
